# PUT-Informatics-2019-2023-Edge-Computing-2024-2025

./: README.md
Informatics/AiSD/: rysujWykresy.py
Informatics/AiSD/Algorytmy grafowe/: .gitignore  6.txt  CMakeLists.txt  a.txt  b.txt  d.txt  dane.txt  e.txt  f.txt  graf1.txt  graf3.txt  test.txt
Informatics/AiSD/Algorytmy grafowe/source/: DFS.h  Grafy.cpp  Wyswietlanie.h  ZmienneGlobalne.h  listanastepnikow.h  macierzGrafu.h  macierzSasiedztwa.h  tworzeniemacierzy_list.h
Informatics/AiSD/Zlozone struktury danych/: .gitignore  CMakeLists.txt
Informatics/AiSD/Zlozone struktury danych/source/: Drzewa.cpp  Drzewa.h  ModyfikowanieAVL.h  ModyfikowanieBST.h  Program.h  RotacjeAVL.h  RotacjeBST.h  Sortowania.h  WyswietlanieAVL.h  WyswietlanieBST.h
Informatics/BO/: graf1.m  graf2.m
Informatics/EIO/: lab_introduction.ipynb  lab_networks.ipynb  lab_recurrent_2.ipynb  lab_tensorflow.ipynb  regression.ipynb
Informatics/Fizyka/: daneTabela.py  rysujWykresy.py
Informatics/Prolog/: Tut1.pl  Tut2.pl  Tut3.pl  zaliczenie.pl
Informatics/SWB/: arduinoFix.txt
Informatics/SiAD/: Egzamin1_2021.ipynb  Egzamin2_2021.ipynb  Habemus Zaliczanie v3 userFriendly.ipynb  KOLOKWIUM_NR_2_2020.ipynb  Korelacja.ipynb  R1.ipynb  R2.ipynb  TEST_10.ipynb  TEST_3.ipynb  TEST_7.ipynb  TEST_8.ipynb  TEST_9.ipynb  Testy parametryczne.ipynb  Testy-Z-i-T-2-Populacje.ipynb  Testy-Z-i-T.ipynb  ZnakiIKorelacja.ipynb
Informatics/WD/: criteria.csv  dane.csv  dane.xlsx  daneDoUTA.csv  decided.py  drukarki.py  generator.py  mats.csv  parts.csv  parts.py  printers.csv  raport_pc_pi.xls
(+321 files in other folders)
